--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "cookies-next": "^4.2.1",
+    "glob": "^10.4.2",
+    "lru-cache": "^10.3.0",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
-    "recoil": "^0.7.7"
+    "recoil": "^0.7.7",
+    "rimraf": "^5.0.7"
   },
   "devDependencies": {
     "eslint": "^8",
