--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.4",
     "cookies-next": "^4.2.1",
     "glob": "^10.4.2",
     "lru-cache": "^10.3.0",
